--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;700&display=swap');
+
+$main-color: #2B292D;
+
+body {
+    font-family: 'Work Sans', sans-serif;
+    color: $main-color;
+}
+
 .container {
     padding-left: 10%;
     padding-right: 10%;
@@ -15,20 +24,30 @@
         display: grid;
         grid-template-columns: auto auto;
         grid-gap: 2.5rem;
+        font-size: 1.15rem;
     }
     &__nav-list {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-gap: 2.5rem;
+        height: 1.8rem;
+        align-content: center;
         &-item {
             display: inline;
-            &--with-arrow {
+            line-height: 1.8rem;
+            &_active {
+                font-weight: 700;
+            }
+            &_with-arrow {
                 display: grid;
                 grid-template-columns: auto auto;
-                grid-gap: 0.7rem;
-                align-content: center;
+                grid-gap: 0.5rem;
+                align-items: end;
             }
         }
+    }
+    &__main-block {
+        margin-top: 4.8rem;
     }
 }
 
@@ -39,23 +58,33 @@
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
-        &__title {
-
-        }
-        &__description {
-            
-        }
+        margin-left: 1rem;
+        font-size: 1.25rem;
+    }
+    &__title {
+        font-weight: 700;
+    }
+    &__description {
+        color: lighten($main-color, 40%);
     }
 }
 
 .primary-button {
-    background-color: #3040C4;
     border: none;
-    color: white;
     padding: 0.5rem 1rem;
     width: 10rem;
     height: 3rem;
     text-align: center;
     text-decoration: none;
     display: inline-block;
+    font-family: 'Work Sans', sans-serif;
+    font-weight: 700;
+    &_blue {
+        background-color: #3040C4;
+        color: white;
+    }
+    &_white {
+        background-color: white;
+        color: #3040C4;
+    }
 }
