--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -1,26 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;700&display=swap');
-
-$main-color: #2B292D;
-
-body {
-    font-family: 'Work Sans', sans-serif;
-    color: $main-color;
-}
-
-h1 {
-    font-size: 5rem;
-    font-weight: 700;
-}
-
-h4 {
-    font-size: 1.5rem;
-}
-
-.container {
-    padding-left: 10%;
-    padding-right: 10%;
-}
-
 .header {
     background-color: #F3C6BD;
     padding-top: 2.5rem;
@@ -32,18 +9,16 @@ h4 {
     &__nav {
         display: grid;
         grid-template-columns: auto auto;
-        grid-gap: 2.5rem;
         font-size: 1.15rem;
     }
     &__nav-list {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-gap: 2.5rem;
+        display: flex;
         height: 1.8rem;
         align-content: center;
         &-item {
             display: inline;
             line-height: 1.8rem;
+            margin-right: 3.5rem;
             &_active {
                 font-weight: 700;
             }
@@ -75,50 +50,12 @@ h4 {
     &__text {
         width: 38%;
         margin-bottom: 3.6rem;
+        line-height: 2.1rem;
     }
     &__image {
         position: absolute;
         top: 0;
         left: 40%;
         z-index: 1;
-    }
-}
-
-.logo {
-    display: flex;
-    flex-direction: row;
-    &__text {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        margin-left: 1rem;
-        font-size: 1.25rem;
-    }
-    &__title {
-        font-weight: 700;
-    }
-    &__description {
-        color: lighten($main-color, 40%);
-    }
-}
-
-.primary-button {
-    border: none;
-    padding: 0.5rem 1rem;
-    width: 10rem;
-    height: 3rem;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-family: 'Work Sans', sans-serif;
-    font-size: 1.1rem;
-    font-weight: 700;
-    &_blue {
-        background-color: #3040C4;
-        color: white;
-    }
-    &_white {
-        background-color: white;
-        color: #3040C4;
     }
 }
